# audio-matcher

./: .gitignore  Cargo.toml  todo.txt
audacity/: Cargo.toml
audacity/command-derive/: Cargo.toml
audacity/command-derive/src/: lib.rs
audacity/src/: command.rs  data.rs  lib.rs
benches/: my_benchmark.rs
common/: Cargo.toml
common/src/: boo.rs  io.rs  lib.rs  rc.rs  str_convert.rs
common/src/extensions/: cow.rs  duration.rs  iter.rs  mod.rs  option.rs  vec.rs
opus_tag/: Cargo.toml
opus_tag/src/: lib.rs  ogg.rs  opus_tagger.rs
progress_bar/: Cargo.toml
progress_bar/src/: lib.rs  progress_bar.rs
progress_bar/src/bar/: arrow.rs  bound.rs  mod.rs
res/: progress.txt
src/: args.rs  audio_matcher.rs  data.rs  errors.rs  iter.rs  leveled_output.rs  lib.rs  main.rs  mp3_reader.rs  progress_bar.rs  worker.rs
src/archive/: args.rs  data.rs  mod.rs
src/extensions/: iter.rs  mod.rs  option.rs  vec.rs
src/matcher/: args.rs  audio_matcher.rs  errors.rs  mod.rs  mp3_reader.rs
src/worker/: args.rs  index.rs  mod.rs  tagger.rs
