[package]
name = "audio-matcher"
version = "0.1.0+dev"
edition = "2021"
default-run = "audio-matcher"

[workspace]
members = ["common", "audacity", "progress_bar", "opus_tag"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
itertools = "0.11"
clap = { version = "4.3", features = ["derive"] }
thiserror = "1.0"
derive_builder = "0.12"
lazy-init = "0.5"
text_io = "0.1"
pad = "0.1"
chrono = "0.4"
regex = "1.8"
lazy_static = "1.4"
glob = "0.3"
common = { path = "./common" }
progress_bar = { path = "./progress_bar" }
audacity = { path = "./audacity" }
opus_tag = { path = "./opus_tag" }
env_logger = "0.10"
log = "0.4"
derive_more = "0.99"
confy = "0.5"
serde = "1.0"
toml = "0.7"
async-trait = "0.1"
inquire = "0.6"
lazycell = "1.3"
momo = "0.2"
shellwords = "1.1"

threadpool = "1.8"
rayon = "1.7"
futures = "0.3"
tokio = { version = "1.29", features = ["full"] }

minimp3 = "0.5"
mp3-duration = "0.1" # doesn't work very good for usecase
id3 = "1.7"

realfft = "3.3"
fftconvolve = "0.1" # maybe remove
ndarray = "0.15"

find_peaks = "0.1"


[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "my_benchmark"
harness = false
