[package]
name = "audio-matcher"
version = "0.1.0+dev"
edition = "2021"
default-run = "audio-matcher"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
common = { git = "ssh://git@github.com/NilsJochem/rust-common" }
progress_bar = { git = "ssh://git@github.com/NilsJochem/progress_bar" }
audacity = { git = "ssh://git@github.com/NilsJochem/audacity" }
opus_tag = { git = "ssh://git@github.com/NilsJochem/opus_tag" }
itertools = "0.12.0"
clap = { version = "4.4", features = ["derive"] }
thiserror = "1.0"
derive_builder = "0.12"
lazy-init = "0.5"
pad = "0.1"
chrono = "0.4"
regex = "1.8"
lazy_static = "1.4"
glob = "0.3"
log = "0.4"
derive_more = "0.99"
confy = "0.5"
serde = "1.0"
toml = "0.8"
async-trait = "0.1"
lazycell = "1.3"
momo = "0.2"
shellwords = "1.1"

threadpool = "1.8"
rayon = "1.7"
futures = "0.3"
tokio = { version = "1.29", features = ["full"] }

minimp3 = "0.5"
mp3-duration = "0.1" # doesn't work very good for usecase
id3 = "1.7"

realfft = "3.3"
fftconvolve = "0.1" # maybe remove
ndarray = "0.15"

find_peaks = "0.1"


[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "my_benchmark"
harness = false

[lints]
# base
clippy.nursery = { level = "warn", priority = -1 }
clippy.pedantic = { level = "warn", priority = -1 }

clippy.empty_structs_with_brackets = "warn"
clippy.format_push_string = "warn"
clippy.if_then_some_else_none = "warn"
clippy.missing_assert_message = "warn"
clippy.multiple_inherent_impl = "warn"
clippy.non_ascii_literal = "warn"
clippy.self_named_module_files = "warn"
clippy.semicolon_inside_block = "warn"
clippy.separated_literal_suffix = "warn"
clippy.str_to_string = "warn"
clippy.string_to_string = "warn"
rust.unsafe_op_in_unsafe_fn = "warn"
# rust.missing_docs = "warn"

clippy.cast_possible_truncation = "allow"
clippy.cast_precision_loss = "allow"
clippy.cast_lossless = "allow"
clippy.cast_sign_loss = "allow"
clippy.single_match_else = "allow"
clippy.option_if_let_else = "allow"
clippy.must_use_candidate = "allow"
clippy.too_many_lines = "allow"
clippy.impl_trait_in_params = "allow"

# custom for this crate
clippy.missing_errors_doc = "allow"
clippy.missing_panics_doc = "allow"
