[package]
name = "audacity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
log = "0.4"
derive_more = "0.99"

tokio = { version = "1.29", features = ["full"] }

serde = "1.0"
serde_json = "1.0"
serde_tuple = "0.5"
