[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
log = "0.4"
tokio = { version = "1.29", features = ["full"] }
futures = "0.3"
itertools = "0.11"
async-trait = "0.1"
momo = "0.2"
